--- a/YAZLAB2/appsettings.json
+++ b/YAZLAB2/appsettings.json
@@ -1,4 +1,16 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=yazlabbb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  /*
+  "EmailSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "sudeopan1@gmail.com",
+    "Password": "yourappspecificpassword",
+    "EnableSsl": true
+  },
+  */
   "Logging": {
     "LogLevel": {
       "Default": "Information",
