--- a/YAZLAB2/YAZLAB2.csproj
+++ b/YAZLAB2/YAZLAB2.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="Views\Admin\AdminHubArea.cshtml" />
+    <Content Remove="Views\Kategori\Delete.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,15 +24,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <UpToDateCheckInput Remove="Views\Admin\AdminHubArea.cshtml" />
+    <UpToDateCheckInput Remove="Views\Kategori\Delete.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
-    <_ContentIncludedByDefault Remove="Views\Admin\AdminHubArea.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Kategori\Delete.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Views\Admin\AdminHubArea.cshtml" />
+    <None Include="Views\Kategori\Delete.cshtml" />
   </ItemGroup>
 
 </Project>
