--- a/YAZLAB2/appsettings.json
+++ b/YAZLAB2/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=yazlabbb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=yazlab_son;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   /*
   "EmailSettings": {
